--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="Homepage of Mehrsa Pourya at EPFL">
-  <meta name="keywords" content="Mehrsa Pourya, Mehrsa, ">
-  <meta name="author" content="Mehrsa Pourya">
+  <meta name="description" content="Homepage of Max von Büdingen at UZH">
+  <meta name="keywords" content="Max von Büdingen, Max, UZH, University of Zurich">
+  <meta name="author" content="Max von Büdingen">
   <base href="/">
 
-  <link rel="shortcut icon" href="data/Mehrsa.ico">
+  <link rel="shortcut icon" href="data/Max.ico">
 
-  <title>Mehrsa Pourya</title>
+  <title>Max von Büdingen</title>
 
   <!-- Remote: angular and bootstrap -->
   <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.5/angular.min.js"></script>
@@ -71,7 +71,7 @@
           </li>
           -->
         </ul>
-      </div><!-- /.navbar-collapse -->
+      </div><!-- /.navbar-collapse --> 
     </div><!-- /.container-fluid -->
   </nav>
 
