--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="description" content="Homepage of Max von Büdingen at UZH">
-  <meta name="keywords" content="Max von Büdingen, Max, UZH, University of Zurich">
+  <meta name="keywords" content="Max von Büdingen, Max, University of Zurich">
   <meta name="author" content="Max von Büdingen">
   <base href="/">
 
