--- a/html/teaching.html
+++ b/html/teaching.html
@@ -1,2 +1,19 @@
 <h3> Teaching activities </h3>
 
+
+<p style="text-align:justify">
+    I am passionate about communicating scientific concepts and fostering a deeper
+    understanding of biology among students.
+    Especially, I enjoy teaching quantitative and computational methods to biology
+    students, helping them to develop skills that are increasingly important in modern
+    biological research.
+</p>
+
+    <h4> Courses taught as instructor </h4>
+    <ul>
+      <li> <b> 2023-present: </b> BIO325 Systems Dynamics in Cell and
+      Developmental Biology   
+        (Bachelor course, University of Zurich) </li>
+        This course allows students to join a lab for 3.5 weeks and carry out a
+        small research project, from data collection to analysis and
+        presentation.
