--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
             </a>
           </li>
           -->
+
+          <li ng-class="{'active': button == '/teaching'}">
+            <a href="#/teaching">
+              <i class="material-icons">school</i> Teaching
+            </a>
+          </li>
         </ul>
       </div><!-- /.navbar-collapse --> 
     </div><!-- /.container-fluid -->
